Fixed styling so its viewable on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,18 @@
   color: black;
 }
 
+@media only screen and (max-width: 1024px){
+  
+  .contact-list i {
+    font-size: 25px;
+  }
+  .contact-list a{
+    font-size: 13px;
+    text-align: left;
+
+  }
+}
+
 /* Contacts Page Styling */
 
 .avatar-img {
